# OmnisStream-Spec

./: .editorconfig  .gitignore  CANONICAL_JSON.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST_SPEC.md  NOTICE  README.md  REPOSITORY_SPEC.md  SECURITY.md  VERSIONING.md
proto/: README.md  protoc.sh
proto/omnisstream/v1/: manifest.proto
test-vectors/: README.md
test-vectors/vector-compressed/: EXPECTED.txt  manifest.json  manifest.pb
test-vectors/vector-minimal/: EXPECTED.txt  manifest.json  manifest.pb
tools/validator/: README.md  pyproject.toml
tools/validator/src/omnisstream/: __init__.py
tools/validator/src/omnisstream/v1/: __init__.py  manifest_pb2.py
tools/validator/src/omnisstream_validate/: cli.py  hashes.py  load.py  model.py  validate.py
tools/validator/tests/: test_json_loader.py  test_vectors.py
